--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -26,7 +26,7 @@
 
     <ng-container matColumnDef="cpf">
       <th mat-header-cell *matHeaderCellDef> CPF </th>
-      <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.cpf | mask: "000.000.000-00"}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
@@ -36,7 +36,14 @@
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Ações </th>
-      <td mat-cell *matCellDef="let element"> (:) </td>
+      <td mat-cell *matCellDef="let element">
+        <a routerLink="/tecnicos/edit/{{ element.id }}" (click)="addTecnicoUpdate(element.id)">
+          <i class="material-icons edit">edit</i>
+        </a>
+        <a routerLink="">
+          <i class="material-icons delete">delete</i>
+        </a>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
