--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -40,7 +40,7 @@
         <a routerLink="/tecnicos/edit/{{ element.id }}" (click)="addTecnicoUpdate(element.id)">
           <i class="material-icons edit">edit</i>
         </a>
-        <a routerLink="">
+        <a routerLink="/tecnicos/delete/{{ element.id }}" (click)="addTecnicoUpdate(element.id)">
           <i class="material-icons delete">delete</i>
         </a>
       </td>
