--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -4,9 +4,30 @@
     <img src="assets/img/tecnico-create.svg" alt="">
 
     <section class="section">
-      <mat-checkbox (click)="addPerfil(0)" name="admin" class="margin" color="primary">Admin</mat-checkbox>
-      <mat-checkbox (click)="addPerfil(1)" name="tecnico" class="margin" color="primary">Técnico</mat-checkbox>
-      <mat-checkbox (click)="addPerfil(2)" name="cliente" class="margin" color="primary">Cliente</mat-checkbox>
+      <mat-checkbox 
+        (click)="addPerfil('ADMIN')" 
+        [checked]="hasPerfil('ADMIN')" 
+        name="admin" 
+        class="margin" 
+        color="primary"
+      >Admin</mat-checkbox>
+      
+      <mat-checkbox 
+        (click)="addPerfil('TECNICO')" 
+        [checked]="hasPerfil('TECNICO')" 
+        name="tecnico" 
+        class="margin" 
+        color="primary"
+      >Técnico</mat-checkbox>
+      
+      <mat-checkbox 
+        (click)="addPerfil('CLIENTE')" 
+        [checked]="hasPerfil('CLIENTE')" 
+        name="cliente" 
+        class="margin" 
+        color="primary"
+      >Cliente</mat-checkbox>
+      
     </section>
 
       <p>
