--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,7 +18,7 @@
         <p class="link-name">Técnicos</p>
       </div>
     </a>
-    <a mat-list-item routerLink="/" >
+    <a mat-list-item routerLink="/clientes" >
       <div class="menu-item">
         <i class="material-icons">person</i>
         <p class="link-name">Cliente</p>
