added chamado component

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -24,6 +24,12 @@
         <p class="link-name">Cliente</p>
       </div>
     </a>
+    <a mat-list-item routerLink="/chamados" >
+      <div class="menu-item">
+        <i class="material-icons">support</i>
+        <p class="link-name">Chamados</p>
+      </div>
+    </a>
     <a mat-list-item routerLink="/" >
       <div class="menu-item">
         <i class="material-icons">code</i>
