--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -4,6 +4,7 @@
   <button 
     mat-raised-button
     color="primary"
+    routerLink="/chamados/create"
   >Novo chamado</button>
 
   <mat-form-field appearance="fill" class="table-filter">
@@ -59,10 +60,10 @@
     <ng-container matColumnDef="acoes">
       <th mat-header-cell *matHeaderCellDef> Ações </th>
       <td mat-cell *matCellDef="let element">
-        <a routerLink="" (click)="addclienteUpdate(element.id)">
+        <a routerLink="" (click)="addChamadoUpdate(element.id)">
           <i class="material-icons edit">edit</i>
         </a>
-        <a routerLink="" (click)="addclienteUpdate(element.id)">
+        <a routerLink="" (click)="addChamadoUpdate(element.id)">
           <i class="material-icons delete">visibility</i>
         </a>
       </td>
