--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,5 +1,5 @@
 <div class="container mat-elevation-z8">
-  <h1 class="full-width">Criar novo chamado</h1>
+  <h1 class="full-width">Atualizar chamado</h1>
   <img class="full-width" src="assets/img/chamado-create.svg" alt="Chamado image">
 
   <form class="form">
@@ -16,7 +16,7 @@
   
     <div class="status-prioridade full-width">
       <mat-form-field appearance="outline">
-        <mat-label>Selecione um status</mat-label>
+        <mat-label>STATUS ({{ convertStatus(chamado.status) }})</mat-label>
         <mat-select
           [(ngModel)]="chamado.status"
           name="status"
@@ -30,7 +30,7 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Selecione uma prioridade</mat-label>
+        <mat-label>PRIORIDADE ({{ convertPrioridade(chamado.prioridade) }})</mat-label>
         <mat-select
           [(ngModel)]="chamado.prioridade"
           name="prioridade"
@@ -46,20 +46,20 @@
 
     <div class="tecnico">
       <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Selecione um técnico</mat-label>
+        <mat-label>TECNICO ({{chamado.nomeTecnico}})</mat-label>
         <mat-select
           [(ngModel)]="chamado.tecnico"
           [formControl]="tecnico"
           required
         >
-          <mat-option *ngFor="let tecnico of tecnicos" value="{{tecnico.id}}">{{tecnico.nome}}</mat-option>
+          <mat-option *ngFor="let tecnico of tecnicos" value="{{tecnico.id}}" selected>{{tecnico.nome}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
 
     <div class="cliente">
       <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Selecione um cliente</mat-label>
+        <mat-label>CHAMADO ({{chamado.nomeCliente}})</mat-label>
         <mat-select
           [(ngModel)]="chamado.cliente"
           [formControl]="cliente"
@@ -88,8 +88,8 @@
       class="full-width mat-elevation-z4" 
       mat-raised-button 
       color="primary"
-      (click)="create()"
-    >Criar</button>
+      (click)="update()"
+    >Atualizar</button>
     <button 
       class="full-width mat-elevation-z4" 
       mat-stroked-button 
